# hackeurope-2026

./: CLAUDE.md  README.md
backend/: .env.example  .gitignore  agent_system_prompt.py  agent_tools.py  app.db  database.py  event_bus.py  main.py  mcp_server.py  models.py  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 488e1970ad6c_add_models.py  5ff8b868ffb1_add_models.py  (+2 more)
backend/diagnostics/: engine.py  schemas.py
backend/routers/: agent.py  diagnostics.py  events.py  llm.py  projects.py  sessions.py
changes/: greenai-sustainability-diagnostics.md
docs/: ARCHITECTURE.md  DIAGNOSTICS_GUIDE.md  OBSERVER_AND_BACKEND_GUIDE.md  SETUP.md
frontend/: AGENTS.md  openapi-ts.config.ts  openapi.json  package-lock.json  package.json
frontend/src/: hey-api.ts
neural_network/: .gitignore  architecture.json  observer.py  requirements.txt  schema.py
neural_network/sample/: buggy_cnn.ipynb  fix_cnn.ipynb  mini_gpt.ipynb  observer.py  small_cnn.ipynb
visualization/: .gitignore  CMakeLists.txt  README.md  cnn-mock-report.json  index.html  mock-report.json  network-schema.json  package-lock.json  package.json  setup_glad.sh
visualization/include/: Camera.h  NeuralNetwork.h  Renderer.h  Shader.h
visualization/shaders/: connection.frag  node.frag  node.vert
visualization/src/: Camera.cpp  NeuralNetwork.cpp  Renderer.cpp  Shader.cpp  api.js  main.cpp  main.js  style.css
visualization/src/models/: block.js  conv2d.js  dropout.js  embedding.js  feedforward.js  head.js  layernorm.js  linear.js  maxpool2d.js  multiheadattention.js  relu.js
(+29 files in other folders)
